# dummy

./: CMakeLists.txt  README.md  install
CMake/: FindNetCDF.cmake  FindPNetCDF.cmake  FindYAC.cmake
input/config/: input.setup
input/couple/: coupling.xml  coupling.xsd
input/data/: strd.nc
input/grids/: latlon_1.nc
machine/: levante
src/: CMakeLists.txt  dummyr.f90  dummys.f90  mo_coupling.f90  mo_domdcomp.f90  mo_mpi.f90  mo_nc.f90  mo_nc4.f90
